# qlogcollector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: cache.h  colorattr.h  consolestyle.h  message.h  qlogcollector.h  styledstring.h
src/: CMakeLists.txt  cache.cpp  cache.h  colorattr.h  colorformatter.cpp  colorformatter.h  console.cpp  console.h  consolestyle.cpp  consolestyle.h  main.cpp  message.cpp  message.h  notifier.cpp  notifier.h  qlogcollector.cpp  qlogcollector.h  qlogcollector.qrc  qlogcollector.ui  sender.cpp  sender.h  src.pri  styledstring.cpp  styledstring.h
src/widgets/: titlebar.cpp  titlebar.h  titlebar.ui
test/: CMakeLists.txt  logtest.cpp  logtest.h  logtest.ui  main.cpp  printtest.cpp  printtest.h
test/consoleapp/: CMakeLists.txt  logtest.pro  main.cpp
test/widgetapp/: CMakeLists.txt  logtest.cpp  logtest.h  logtest.pro  logtest.ui  main.cpp
